--- a/style.css
+++ b/style.css
@@ -3,20 +3,20 @@
   padding: 0;
   box-sizing: border-box;
 }
-body {
-  font-family: "Poppins", sans-serif;
-}
 
-section {
+html {
 
+	font-size: 3vh;
 	background: #F5F5E9;
 
 }
-
+body {
+  font-family: "Times New Roman";
+}
 
 .section h1 {
 	color: #0b1c47;
-	font-size: 64px;
+	font-size: 3rem;
 	position: absolute;
 	top: 10%;
 	left: 50%;
@@ -27,21 +27,72 @@ section {
 	color: #873F49;
 	text-align: center;
 	white-space: pre-line;
-	font-size: 44px;
+	font-size: 2rem;
 	position: absolute;
-	top: 15%;
+	top: 20%;
 	left: 50%;
 	transform: translate(-50%, -25%);
   }
 
+.com	{
+	color: #a1a1a1;
+	font-style: italic;
+}
+
+.type {
+	color: #7fbbb3;
+}
+
+.func {
+	color: #a7c080;
+}
+
+.op {
+	color: #e67e80;
+}
+
+.value {
+	color: #d699b6;
+}
+
+.code {
+
+	background-color: #2f383e;
+	color: #F5F5E9;
+	border: 1vw solid #2f383e;
+	font-family: "Courier New";
+	white-space: pre-line;
+
+}
+
+.c1 {
+
+	width: 92%;
+	margin-left: 4%;
+	margin-top: 12%;
+	margin-bottom: 4%;
+	height: 70%;
+
+}
+
+.c2 {
+
+	width: 44%;
+	margin-left: 54%;
+	margin-top: 12%;
+	margin-bottom: 4%;
+	height: 70%;
+
+}
+
 .s1 h1 {
-	top: 40%;
+	top: 35%;
 	left: 50%;
 	transform: translate(-50%, -40%);
 }
 
 .s1 h2 {
-	bottom: 10%;
+	top: 35%;
 	left: 50%;
 	transform: translate(-50%, 40%);
 }
@@ -54,6 +105,12 @@ section {
 
 }
 
+.s3 img{
+
+	margin-left: 5%;
+
+}
+
 .s18 h1 {
 	top: 40%;
 	left: 50%;
@@ -61,7 +118,7 @@ section {
 }
 
 .s18 h2 {
-	bottom: 10%;
+	top: 40%;
 	left: 50%;
 	transform: translate(-50%, 40%);
 }
@@ -78,7 +135,7 @@ section {
   margin-top: 20%;
   width: 50%;
   margin-left: 5%;
-  font-size: 20px;
+  font-size: 1rem;
 }
 .description p {
   margin: 50px 0px;
