--- a/style.css
+++ b/style.css
@@ -34,6 +34,40 @@ body {
 	transform: translate(-50%, -25%);
   }
 
+table {
+
+	width: 80%;
+	margin-left: 4%;
+	margin-top: 17.5%;
+	margin-bottom: 4%;
+	border: 1vw solid #81C784;
+
+}
+
+td {
+
+	height: 7.85vh;
+
+}
+
+.on {
+
+	background-color: #1b5e20;
+
+}
+
+.off {
+
+	background-color: #81C784;
+
+}
+
+#customCode {
+
+	margin-left: 8%;
+	width: 85%;
+}
+
 .com	{
 	color: #a1a1a1;
 	font-style: italic;
@@ -153,10 +187,13 @@ body {
 	float: left;
 	width: 50%;
 	padding: 5px;
-  }
+	margin-top: 3%;
+
+}
   
-  .row::after {
-	content: "";
-	clear: both;
-	display: table;
-  }
+.row::after {
+content: "";
+clear: both;
+display: table;
+}
+
