--- a/style.css
+++ b/style.css
@@ -107,6 +107,8 @@ td {
 
 }
 
+
+
 .c1 {
 
 	width: 92%;
@@ -174,13 +176,14 @@ td {
 }
 
 .description {
-  margin-top: 20%;
   width: 50%;
   margin-left: 5%;
   font-size: 1rem;
 }
 .description p {
   margin: 50px 0px;
+	white-space: pre-line;
+
 }
 
 .column {
@@ -195,5 +198,12 @@ td {
 content: "";
 clear: both;
 display: table;
+}
+
+div.scroll {
+
+	overflow-x: hidden;
+	overflow-y: auto;
+
 }
 
