can man vorstellen

--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
   font-family: "Times New Roman";
 }
 
+p {
+
+	white-space: pre-line;
+
+}
+
 .section h1 {
 	color: #0b1c47;
 	font-size: 3rem;
@@ -177,14 +183,11 @@ td {
 
 .description {
   width: 50%;
-  margin-left: 5%;
+  margin-left: 25%;
   font-size: 1rem;
+	margin-top: 15%;
 }
-.description p {
-  margin: 50px 0px;
-	white-space: pre-line;
 
-}
 
 .column {
 	float: left;
@@ -207,3 +210,31 @@ div.scroll {
 
 }
 
+.hard {
+
+	margin-left: 30%;
+
+}
+
+li {
+
+	list-style: none;
+
+}
+
+.project {
+
+	font-size: 1.5rem;
+	width: 80%;
+
+
+}
+
+.startProjekt {
+
+	margin-top: 10%;
+	margin-right: 10%;
+	width: 85%;
+	margin-left: 7%;
+
+}
